--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "cookies-next": "^2.1.1",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^8.5.1",
     "next": "13.5.6",
     "react": "^18",
